# aurora

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  aurora.py  pyproject.toml
data/: download_bortle.py  observations_template.csv
docs/: collecting-observations.md  deploy-raspberry-pi.md  roadmap.md
src/aurora/: __init__.py  aurora.py  backfill.py  calibration.py  config.py  db.py  feedback.py  geocoding.py  geometry.py  main.py  score.py  sms.py  space_weather.py
src/aurora/factors/: __init__.py  aod.py  kp.py  light_pollution.py  moon.py  ovation.py  terrain.py  weather.py
tests/: conftest.py  test_backfill.py  test_calibration.py  test_factors.py  test_feedback.py  test_geometry.py  test_score.py  test_space_weather.py
