[project]
name = "aurora"
version = "0.1.0"
description = "Aurora borealis alert server – texts users when viewing conditions are favorable"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "twilio>=8.0.0",
    "httpx>=0.27.0",
    "geopy>=2.4.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "astral>=3.2",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "timezonefinder>=6.5.0",
]

[project.scripts]
aurora-server = "aurora.main:start"
aurora-calibrate = "aurora.calibration:main"
aurora-import = "aurora.backfill:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aurora"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
